--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "dependencies": {
     "async": "^1.5.2",
     "body-parser": "^1.15.2",
-    "csv-parse": "^1.1.7",
+    "csv-parse": "^5.3.3",
     "debug": "^2.3.3",
-    "ejs": "^2.5.5",
-    "email-existence": "^0.1.5",
+    "ejs": "^3.1.8",
+    "email-existence": "^0.1.6",
     "express": "^4.14.0",
-    "swig": "^1.4.2"
+    "swig": "^0.14.0"
+  },
+  "devDependencies": {
+    "check-dependencies": "^1.1.0"
   }
 }
